项目内容整合

--- a/docs/命令手册.md
+++ b/docs/命令手册.md
@@ -4,16 +4,16 @@
 # 流程介绍
 ## 1. 环境初始化
 
+环境创建
 ~~~shell
 conda create -n mofa_drs python=3.12
-~~~
-
-~~~shell
 conda activate mofa_drs
 ~~~
 
+安装mofa包
+地址 https://github.com/moxin-org/mofa.git
 ~~~shell
-pip install https://github.com/moxin-org/mofa.git
+pip install git@https://github.com/moxin-org/mofa.git
 ~~~
 
 ~~~shell
