--- a/docs/命令手册.md
+++ b/docs/命令手册.md
@@ -13,7 +13,9 @@ conda activate mofa_drs
 安装mofa包
 地址 https://github.com/moxin-org/mofa.git
 ~~~shell
-pip install git@https://github.com/moxin-org/mofa.git
+git clone https://github.com/moxin-org/mofa.git
+cd ./dependents/mofa/python/
+pip install 
 ~~~
 
 ~~~shell
